--- a/package.json
+++ b/package.json
@@ -12,5 +12,17 @@
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "next.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Bella-Jheng/104-app.git"
+  },
+  "author": "yiting",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Bella-Jheng/104-app/issues"
+  },
+  "homepage": "https://github.com/Bella-Jheng/104-app#readme"
 }
