--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "nextjs-course",
+  "proxy": "https://pda.104-dev.com.tw/",
   "version": "0.1.0",
   "private": true,
   "engines": {
@@ -16,6 +17,7 @@
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.5",
     "bootstrap": "^5.2.0",
+    "http-proxy-middleware": "^2.0.6",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
